--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.1.1",
+    "@heroicons/vue": "^2.2.0",
+    "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "pinia": "^3.0.1",
+    "vue": "^3.2.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +24,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "tailwindcss": "^3.4.17"
   },
   "eslintConfig": {
     "root": true,
