--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@fontsource/inter": "^5.1.1",
     "@heroicons/vue": "^2.2.0",
-    "axios": "^1.7.9",
+    "axios": "^1.8.3",
     "chart.js": "^4.4.8",
     "core-js": "^3.8.3",
     "pinia": "^3.0.1",
@@ -20,11 +20,13 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "leaflet": "^1.9.4",
     "tailwindcss": "^3.4.17"
   },
   "eslintConfig": {
