--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.8",
     "core-js": "^3.8.3",
     "pinia": "^3.0.1",
+    "posnfz": "file:",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
   },
