--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "axios": "^1.8.3",
     "chart.js": "^4.4.8",
     "core-js": "^3.8.3",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "pinia": "^3.0.1",
     "posnfz": "file:",
     "vue": "^3.2.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
