--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "leaflet-routing-machine": "^3.2.12",
     "pinia": "^3.0.1",
     "posnfz": "file:",
     "vue": "^3.2.13",
